[develop] 基本轉換貨幣功能
